jdk8 + smartgwt6